--- a/index.html
+++ b/index.html
@@ -42,6 +42,12 @@
                         <span class="stat-number" id="headerTodayTransactions">0</span>
                         <span class="stat-label">حركة اليوم</span>
                     </div>
+                    <div class="stat-item">
+                        <button class="user-menu-btn" onclick="authManager.showUserMenu()" title="قائمة المستخدم">
+                            <span class="user-icon">👤</span>
+                            <span class="user-name" id="currentUserName">المستخدم</span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </header>
@@ -366,6 +372,7 @@
     <script src="assets/js/config.js"></script>
     <script src="assets/js/utils.js"></script>
     <script src="assets/js/database.js"></script>
+    <script src="assets/js/auth.js"></script>
     <script src="assets/js/ui.js"></script>
     <script src="assets/js/transactions.js"></script>
     <script src="assets/js/search.js"></script>
